--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "stylus": "^0.63.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
