--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.1.5"
   }
